gccida/c3/expand_function_end
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_function_end/src/function.c:7278:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_function_end/src/function.c:7295:4: error: expected ';' after expression
rtx v25; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_function_end/src/function.c:7295:5: error: use of undeclared identifier 'v25'
rtx v25; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_function_end/src/function.c:7296:4: error: expected ';' after expression
rtx v26; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_function_end/src/function.c:7296:5: error: use of undeclared identifier 'v26'
rtx v26; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_function_end/src/function.c:7300:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_function_end/src/function.c:7301:4: error: expected ';' after expression
rtx v31; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_function_end/src/function.c:7301:5: error: use of undeclared identifier 'v31'
rtx v31; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_function_end/src/function.c:7303:4: error: expected ';' after expression
rtx x_nonlocal_goto_handler_slots; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_function_end/src/function.c:7303:5: error: use of undeclared identifier 'x_nonlocal_goto_handler_slots'
rtx x_nonlocal_goto_handler_slots; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_function_end/src/function.c:7307:4: error: expected ';' after expression
rtx v37; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_function_end/src/function.c:7307:5: error: use of undeclared identifier 'v37'
rtx v37; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_function_end/src/function.c:7311:4: error: expected ';' after expression
rtx v41; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_function_end/src/function.c:7311:5: error: use of undeclared identifier 'v41'
rtx v41; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_function_end/src/function.c:7315:4: error: expected ';' after expression
rtx return_rtx; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_function_end/src/function.c:7315:5: error: use of undeclared identifier 'return_rtx'
rtx return_rtx; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_function_end/src/function.c:7320:4: error: expected ';' after expression
rtx v50; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_function_end/src/function.c:7320:5: error: use of undeclared identifier 'v50'
rtx v50; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_function_end/src/function.c:7322:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v52; // rax 
^
union 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_function_end/src/obj/function.o] Error 1
